# matcha

./: .gitignore  LICENSE  README.md  dune-project  matcha.opam  rere.opam
examples/async-fetch/: dune  main.re
examples/counter/: dune  main.re
examples/hello-world/: dune  main.re
examples/keyed-switch/: dune  main.re
examples/layout-alignment/: dune  main.re
examples/layout-demo/: dune  main.re
examples/nested-components/: TerminalContext.re  dune  main.re
examples/optional-params/: dune  main.re
examples/people-list/: App.re  FilterableList.re  PeopleList.re  Person.re  SplitView.re  TerminalContext.re  dune  main.re
examples/textarea-demo/: dune  main.re
lib/: Component.re  Context.re  Element.re  Event.re  Hooks.re  Key.re  Matcha.re  Rere.re  Runtime.re  Terminal.re  dune  terminal_stubs.c
ppx/: dune  ppx_component.ml
